--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,11 @@
 		</dependency>
 		<!-- JSF 2 -->
 		<dependency>
+		  <groupId>org.glassfish.web</groupId>
+		  <artifactId>el-impl</artifactId>
+		  <version>2.2</version>
+		</dependency>
+		<dependency>
 			<groupId>com.sun.faces</groupId>
 			<artifactId>jsf-api</artifactId>
 			<version>2.1.11</version>
