actualizacion del pom para generar proyecto web de forma automatica en eclipse

--- a/pom.xml
+++ b/pom.xml
@@ -341,7 +341,14 @@
 					<name>${project.build.finalName}</name>
 				</configuration>
 			</plugin>
-
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-eclipse-plugin</artifactId>
+				<configuration>
+					<wtpapplicationxml>true</wtpapplicationxml>
+					<wtpversion>2.0</wtpversion>
+				</configuration>
+			</plugin>
 		</plugins>
 		<finalName>demo</finalName>
 	</build>
