--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -34,7 +34,7 @@
  
 	<!-- Welcome page -->
 	<welcome-file-list>
-		<welcome-file>/WEB-INF/pages/index.xhtml</welcome-file>
+		<welcome-file>/pages/index.xhtml</welcome-file>
 	</welcome-file-list>
  
 	<!-- JSF mapping -->
